--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-bcrypt==4.3.0
-blinker==1.9.0
-cachelib==0.13.0
-click==8.2.1
-colorama==0.4.6
-dnspython==2.7.0
-Flask==3.1.1
-Flask-Bcrypt==1.0.1
-Flask-PyMongo==3.0.1
-Flask-Session==0.8.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-msgspec==0.19.0
-pymongo==4.13.2
-Werkzeug==3.1.3
+Flask
+Flask-Bcrypt
+Flask-Session
+pymongo
+pandas
+numpy
+scikit-learn
+matplotlib
+gunicorn
+python-dotenv
+email-validator
+Werkzeug>=3.0.0
+itsdangerous>=2.1.2
+Jinja2>=3.1.3
+click>=8.0
